fixed main info spacing and size

--- a/common/main.css
+++ b/common/main.css
@@ -58,7 +58,7 @@ body {
 }
 
 .main-info dt {
-  width: 6.5em;
+  width: 5.6em;
 }
 
 .main-info dd {
